--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
-    <link rel="icon" type="image/png" href="../images/favicon.png">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-</head>
-<body>
+    <link rel="icon" type="image/png" href="./icons/logo.png" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <script src="./scripts/index.js" defer></script>
+  </head>
+  <body>
     <h1>Todo App</h1>
     <div class="wrapper">
-        <form>
-            <input id="todo-input" type="text" 
-            placeholder="write anything and hit enter to add" autocomplete="off">
-            <button id="add-button">ADD</button>
-        </form>
-        <ul id="todo-list">
-            <!-- <li class="todo">
+      <form>
+        <input
+          id="todo-input"
+          type="text"
+          placeholder="write anything and hit enter to add"
+          autocomplete="off"
+        />
+        <button id="add-button">ADD</button>
+      </form>
+      <ul id="todo-list">
+        <!-- <li class="todo">
                 <input type="checkbox" id="todo-1">
                 <label class="custom-checkbox" for="todo-1">
                     <svg fill="transparent" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24">
@@ -49,7 +53,7 @@
                     </svg>
                 </button>
             </li> -->
-        </ul>
+      </ul>
     </div>
-</body>
+  </body>
 </html>
