--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Todo App</title>
     <link rel="icon" type="image/png" href="./icons/logo.png" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <script src="./scripts/config.js" defer></script>
     <script src="./scripts/index.js" defer></script>
   </head>
   <body>
