--- a/public/log-in.html
+++ b/public/log-in.html
@@ -6,25 +6,33 @@
     <title>Log in</title>
     <link rel="icon" type="image/png" href="./icons/logo.png" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <script src="./scripts/config.js" defer></script>
     <script src="./scripts/log-in.js" defer></script>
   </head>
   <body>
-
-      <h1>Log In</h1>
-      <div class="wrapper user-auth">
-        <form>
-          <input type="text" placeholder="Enter Email Id" autocomplete="off" />
-          <input
-            type="password"
-            placeholder="Enter Password"
-            autocomplete="off"
-          />
-          <div class="form-btm">
-            <button>Log In</button>
-            <p><a href="#">Dont Have an Account ?</a></p>
-          </div>
-        </form>
-      </div>
-
+    <h1>Log In</h1>
+    <div class="wrapper user-auth">
+      <form id="login-form">
+        <input
+          type="text"
+          placeholder="Enter Username"
+          autocomplete="off"
+          id="username"
+          required
+        />
+        <input
+          type="password"
+          placeholder="Enter Password"
+          autocomplete="off"
+          id="password"
+          required
+        />
+        <div class="form-btm">
+          <button type="submit" value="Log In">Log In</button>
+          <p><a href="./sign-up.html">Dont Have an Account ?</a></p>
+        </div>
+        <div id="result-message">error message</div>
+      </form>
+    </div>
   </body>
 </html>
