--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,16 @@
   </head>
   <body>
     <h1>Todo App</h1>
+
     <div class="wrapper">
+      <div class="profile-info">
+        <div class="user-details">
+          <p class="username" id="username">Username</p>
+          <p class="email" id="email">user@email.com</p>
+        </div>
+
+        <button id="log-out-btn" value="Log Out">Log Out</button>
+      </div>
       <form>
         <input
           id="todo-input"
