--- a/public/log-in.html
+++ b/public/log-in.html
@@ -29,7 +29,7 @@
         />
         <div class="form-btm">
           <button type="submit" value="Log In">Log In</button>
-          <p><a href="./sign-up.html">Dont Have an Account ?</a></p>
+          <p><a href="./sign-up.html">Don't Have an Account ?</a></p>
         </div>
         <div id="result-message">error message</div>
       </form>
